--- a/assets/scss/_single-common.scss
+++ b/assets/scss/_single-common.scss
@@ -64,15 +64,19 @@
   }
 
   table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 100%;
-    margin: 40px 0;
-    border-radius: 5px;
+    @apply w-full;
+    @apply my-8;
+    @apply border-collapse;
   }
 
   table, th, td {
-    border: 1px solid;
-    padding: 10px;
+    @apply p-2;
+    @apply border;
+    @apply border-gray-500;
+  }
+
+  th {
+    @apply font-bold;
+    @apply text-gray-600;
   }
 }
