--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -1,23 +1,22 @@
 html {
-  line-height: 1.6;
   scroll-behavior: smooth;
 }
 
 body {
   text-rendering: optimizeLegibility;
-  font-feature-settings: "calt" 0, "case", "rlig", "ss03", "cv01", "cv02", "cv03", "cv04", "cv07";
+  font-feature-settings: "calt" 0, "tnum", "case", "rlig", "ss03", "cv01", "cv02", "cv03", "cv04", "cv07";
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-  background: #f1f1f1;
+  @apply w-2;
+  @apply h-2;
+  @apply bg-gray-300;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #c1c1c1;
+  @apply bg-gray-500;
 
   &:hover {
-    background: #a8a8a8;
+    @apply bg-gray-600;
   }
 }
