--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 
+/* purgecss start ignore */
 @import "inter";
 @import "prism";
 @import "single";
 @import "styles";
+/* purgecss end ignore */
 
 @tailwind utilities;
