--- a/layouts/shortcodes/figures.html
+++ b/layouts/shortcodes/figures.html
@@ -1,3 +1,3 @@
-<div class="w-full flex justify-center my-8">
+<div class="w-full flex flex-col sm:flex-row justify-center my-8">
   {{- .Inner -}}
 </div>
