--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="w-full">
-  <nav x-data="{ open: false }" class="bg-light-100 dark:bg-dark-600 text-light-900 dark:text-dark-100">
-    <div class="max-w-screen-md mx-auto">
+  <nav x-data="{ open: false, dark: isDarkTheme() }" class="bg-light-100 dark:bg-dark-600 text-light-900 dark:text-dark-100">
+    <div class="max-w-screen-md mx-auto px-4">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0">
@@ -12,38 +12,62 @@
         <div class="items-center hidden sm:flex">
           <div class="flex items-center">
             {{ range .Site.Menus.main }}
-              <a href="{{ .URL | absURL }}" class="px-3 py-2 font-medium hover:text-light-600 dark-hover:text-dark-300">{{ .Name }}</a>
+              <a href="{{ .URL | absURL }}" class="px-3 py-2 font-medium hover:underline">{{ .Name }}</a>
             {{ end }}
           </div>
           <div class="h-6 ml-3 mr-4 border-l-1 border-light-900 dark:border-dark-100"></div>
-          <button @click="toggleTheme()" class="inline-flex p-2 items-center justify-center hover:text-light-600 dark-hover:text-dark-300 focus:outline-none">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
-              <path transform="translate(1, 1)" d="M22 41C32.4934 41 41 32.4934 41 22C41 11.5066 32.4934 3 22 3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z" />
+          <button @click="dark = toggleTheme()" class="inline-flex p-2 items-center justify-center focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="!dark" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path x-show="!dark" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="dark" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="5" />
+              <line x1="12" y1="1" x2="12" y2="3" />
+              <line x1="12" y1="21" x2="12" y2="23" />
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+              <line x1="1" y1="12" x2="3" y2="12" />
+              <line x1="21" y1="12" x2="23" y2="12" />
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
             </svg>
           </button>
         </div>
-        <div class="absolute inset-y-0 right-0 px-2 flex items-center sm:hidden">
-          <button @click="toggleTheme()" class="inline-flex items-center justify-center p-2 hover:text-light-600 dark-hover:text-dark-300 focus:outline-none">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48" fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
-              <path transform="translate(1, 1)" d="M22 41C32.4934 41 41 32.4934 41 22C41 11.5066 32.4934 3 22 3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7 13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z" />
+        <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
+          <button @click="dark = toggleTheme()" class="inline-flex items-center justify-center p-2 focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="!dark" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path x-show="!dark" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="dark" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="5" />
+              <line x1="12" y1="1" x2="12" y2="3" />
+              <line x1="12" y1="21" x2="12" y2="23" />
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+              <line x1="1" y1="12" x2="3" y2="12" />
+              <line x1="21" y1="12" x2="23" y2="12" />
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
             </svg>
           </button>
-          <button @click="open = !open" class="inline-flex ml-2 items-center justify-center p-2 hover:text-light-600 dark-hover:text-dark-300 focus:outline-none">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1="12" x2="21" y2="12" />
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1=" 6" x2="21" y2=" 6" />
-              <line :class="{ 'hidden':  open, 'inline-flex': !open }" x1=" 3" y1="18" x2="21" y2="18" />
-              <line :class="{ 'hidden': !open, 'inline-flex':  open }" x1="18" y1=" 6" x2=" 6" y2="18" />
-              <line :class="{ 'hidden': !open, 'inline-flex':  open }" x1=" 6" y1=" 6" x2="18" y2="18" />
+          <button @click="open = !open" class="inline-flex items-center justify-center p-2 focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="!open" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <line x1="3" y1="12" x2="21" y2="12" />
+              <line x1="3" y1="6" x2="21" y2="6" />
+              <line x1="3" y1="18" x2="21" y2="18" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x-show="open" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <line x1="18" y1="6" x2="6" y2="18" />
+              <line x1="6" y1="6" x2="18" y2="18" />
             </svg>
           </button>
         </div>
       </div>
     </div>
-    <div :class="{ block: open, hidden: !open }" class="sm:hidden">
+    <div x-show="open" class="block sm:hidden">
       <div class="px-2 pb-2">
         {{ range .Site.Menus.main }}
-          <a href="{{ .URL | absURL }}" class="block mb-1 px-3 py-2 hover:text-light-600 dark-hover:text-dark-300">{{ .Name }}</a>
+          <a href="{{ .URL | absURL }}" class="block mb-1 px-3 py-2 hover:underline">{{ .Name }}</a>
         {{ end }}
       </div>
     </div>
