--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,202 @@
-<!DOCTYPE html>
-<html class="font-body antialiased" lang="{{ .Site.Language }}">
-  <head>
-    {{ partial "head.html" . }}
-  </head>
-  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
-    {{ partial "header.html" . }}
-    {{ partial "javascript.html" . }}
-  </body>
-</html>
+{{ define "main" }}
+  <div class="my-4">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" shape-rendering="crispEdges">
+      <rect x=" 4" y=" 0" width="1" height="1" fill="#000000" />
+      <rect x=" 5" y=" 0" width="1" height="1" fill="#000000" />
+      <rect x="11" y=" 0" width="1" height="1" fill="#000000" />
+      <rect x="12" y=" 0" width="1" height="1" fill="#000000" />
+      <rect x=" 3" y=" 1" width="1" height="1" fill="#000000" />
+      <rect x=" 4" y=" 1" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 5" y=" 1" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 6" y=" 1" width="1" height="1" fill="#000000" />
+      <rect x="10" y=" 1" width="1" height="1" fill="#000000" />
+      <rect x="11" y=" 1" width="1" height="1" fill="#00D4B0" />
+      <rect x="12" y=" 1" width="1" height="1" fill="#00D4B0" />
+      <rect x="13" y=" 1" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y=" 2" width="1" height="1" fill="#000000" />
+      <rect x=" 3" y=" 2" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 4" y=" 2" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 5" y=" 2" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 6" y=" 2" width="1" height="1" fill="#000000" />
+      <rect x=" 9" y=" 2" width="1" height="1" fill="#000000" />
+      <rect x="10" y=" 2" width="1" height="1" fill="#00D4B0" />
+      <rect x="11" y=" 2" width="1" height="1" fill="#00D4B0" />
+      <rect x="12" y=" 2" width="1" height="1" fill="#00D4B0" />
+      <rect x="13" y=" 2" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y=" 3" width="1" height="1" fill="#000000" />
+      <rect x=" 3" y=" 3" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 4" y=" 3" width="1" height="1" fill="#31CED8" />
+      <rect x=" 5" y=" 3" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 6" y=" 3" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 7" y=" 3" width="1" height="1" fill="#000000" />
+      <rect x=" 9" y=" 3" width="1" height="1" fill="#000000" />
+      <rect x="10" y=" 3" width="1" height="1" fill="#00D4B0" />
+      <rect x="11" y=" 3" width="1" height="1" fill="#00DBB3" />
+      <rect x="12" y=" 3" width="1" height="1" fill="#00D4B0" />
+      <rect x="13" y=" 3" width="1" height="1" fill="#00D4B0" />
+      <rect x="14" y=" 3" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 4" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y=" 4" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 3" y=" 4" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 4" y=" 4" width="1" height="1" fill="#31CED8" />
+      <rect x=" 5" y=" 4" width="1" height="1" fill="#31CED8" />
+      <rect x=" 6" y=" 4" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 7" y=" 4" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 8" y=" 4" width="1" height="1" fill="#000000" />
+      <rect x=" 9" y=" 4" width="1" height="1" fill="#00D4B0" />
+      <rect x="10" y=" 4" width="1" height="1" fill="#00D4B0" />
+      <rect x="11" y=" 4" width="1" height="1" fill="#00DBB3" />
+      <rect x="12" y=" 4" width="1" height="1" fill="#00DBB3" />
+      <rect x="13" y=" 4" width="1" height="1" fill="#00D4B0" />
+      <rect x="14" y=" 4" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 5" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y=" 5" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 3" y=" 5" width="1" height="1" fill="#31CED8" />
+      <rect x=" 4" y=" 5" width="1" height="1" fill="#31CED8" />
+      <rect x=" 5" y=" 5" width="1" height="1" fill="#31CED8" />
+      <rect x=" 6" y=" 5" width="1" height="1" fill="#31CED8" />
+      <rect x=" 7" y=" 5" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 8" y=" 5" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 9" y=" 5" width="1" height="1" fill="#000000" />
+      <rect x="10" y=" 5" width="1" height="1" fill="#000000" />
+      <rect x="11" y=" 5" width="1" height="1" fill="#00DBB3" />
+      <rect x="12" y=" 5" width="1" height="1" fill="#00DBB3" />
+      <rect x="13" y=" 5" width="1" height="1" fill="#00D4B0" />
+      <rect x="14" y=" 5" width="1" height="1" fill="#000000" />
+      <rect x=" 0" y=" 6" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 6" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 2" y=" 6" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 3" y=" 6" width="1" height="1" fill="#31CED8" />
+      <rect x=" 4" y=" 6" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 5" y=" 6" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 6" y=" 6" width="1" height="1" fill="#31CED8" />
+      <rect x=" 7" y=" 6" width="1" height="1" fill="#31CED8" />
+      <rect x=" 8" y=" 6" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 9" y=" 6" width="1" height="1" fill="#25CAD4" />
+      <rect x="10" y=" 6" width="1" height="1" fill="#25CAD4" />
+      <rect x="11" y=" 6" width="1" height="1" fill="#000000" />
+      <rect x="12" y=" 6" width="1" height="1" fill="#000000" />
+      <rect x="13" y=" 6" width="1" height="1" fill="#00D4B0" />
+      <rect x="14" y=" 6" width="1" height="1" fill="#00D4B0" />
+      <rect x="15" y=" 6" width="1" height="1" fill="#000000" />
+      <rect x=" 0" y=" 7" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 7" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y=" 7" width="1" height="1" fill="#25CAD4" />
+      <rect x=" 3" y=" 7" width="1" height="1" fill="#31CED8" />
+      <rect x=" 4" y=" 7" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 5" y=" 7" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 6" y=" 7" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 7" y=" 7" width="1" height="1" fill="#31CED8" />
+      <rect x=" 8" y=" 7" width="1" height="1" fill="#31CED8" />
+      <rect x=" 9" y=" 7" width="1" height="1" fill="#31CED8" />
+      <rect x="10" y=" 7" width="1" height="1" fill="#25CAD4" />
+      <rect x="11" y=" 7" width="1" height="1" fill="#25CAD4" />
+      <rect x="12" y=" 7" width="1" height="1" fill="#25CAD4" />
+      <rect x="13" y=" 7" width="1" height="1" fill="#000000" />
+      <rect x="14" y=" 7" width="1" height="1" fill="#000000" />
+      <rect x="15" y=" 7" width="1" height="1" fill="#000000" />
+      <rect x=" 0" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 8" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 2" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x=" 3" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x=" 4" y=" 8" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 5" y=" 8" width="1" height="1" fill="#48D6DF" />
+      <rect x=" 6" y=" 8" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 7" y=" 8" width="1" height="1" fill="#3CD2DB" />
+      <rect x=" 8" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x=" 9" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x="10" y=" 8" width="1" height="1" fill="#31CED8" />
+      <rect x="11" y=" 8" width="1" height="1" fill="#31CED8" />
+      <rect x="12" y=" 8" width="1" height="1" fill="#25CAD4" />
+      <rect x="13" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x="14" y=" 8" width="1" height="1" fill="#24292E" />
+      <rect x="15" y=" 8" width="1" height="1" fill="#000000" />
+      <rect x=" 0" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y=" 9" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 2" y=" 9" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 3" y=" 9" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 4" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x=" 5" y=" 9" width="1" height="1" fill="#48D6DF" />
+      <rect x=" 6" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x=" 7" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x=" 8" y=" 9" width="1" height="1" fill="#1F2328" />
+      <rect x=" 9" y=" 9" width="1" height="1" fill="#1F2328" />
+      <rect x="10" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x="11" y=" 9" width="1" height="1" fill="#31CED8" />
+      <rect x="12" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x="13" y=" 9" width="1" height="1" fill="#24292E" />
+      <rect x="14" y=" 9" width="1" height="1" fill="#24292E" />
+      <rect x="15" y=" 9" width="1" height="1" fill="#000000" />
+      <rect x=" 0" y="10" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y="10" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 2" y="10" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 3" y="10" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 4" y="10" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 5" y="10" width="1" height="1" fill="#000000" />
+      <rect x=" 6" y="10" width="1" height="1" fill="#1D2024" />
+      <rect x=" 7" y="10" width="1" height="1" fill="#1D2024" />
+      <rect x=" 8" y="10" width="1" height="1" fill="#1F2328" />
+      <rect x=" 9" y="10" width="1" height="1" fill="#1F2328" />
+      <rect x="10" y="10" width="1" height="1" fill="#1F2328" />
+      <rect x="11" y="10" width="1" height="1" fill="#000000" />
+      <rect x="12" y="10" width="1" height="1" fill="#22262B" />
+      <rect x="13" y="10" width="1" height="1" fill="#24292E" />
+      <rect x="14" y="10" width="1" height="1" fill="#24292E" />
+      <rect x="15" y="10" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y="11" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y="11" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 3" y="11" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 4" y="11" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 5" y="11" width="1" height="1" fill="#1D2024" />
+      <rect x=" 6" y="11" width="1" height="1" fill="#1D2024" />
+      <rect x=" 7" y="11" width="1" height="1" fill="#1D2024" />
+      <rect x=" 8" y="11" width="1" height="1" fill="#1F2328" />
+      <rect x=" 9" y="11" width="1" height="1" fill="#1F2328" />
+      <rect x="10" y="11" width="1" height="1" fill="#1F2328" />
+      <rect x="11" y="11" width="1" height="1" fill="#22262B" />
+      <rect x="12" y="11" width="1" height="1" fill="#22262B" />
+      <rect x="13" y="11" width="1" height="1" fill="#22262B" />
+      <rect x="14" y="11" width="1" height="1" fill="#000000" />
+      <rect x=" 1" y="12" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y="12" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 3" y="12" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 4" y="12" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 5" y="12" width="1" height="1" fill="#1D2024" />
+      <rect x=" 6" y="12" width="1" height="1" fill="#1D2024" />
+      <rect x=" 7" y="12" width="1" height="1" fill="#1D2024" />
+      <rect x=" 8" y="12" width="1" height="1" fill="#1D2024" />
+      <rect x=" 9" y="12" width="1" height="1" fill="#1F2328" />
+      <rect x="10" y="12" width="1" height="1" fill="#1F2328" />
+      <rect x="11" y="12" width="1" height="1" fill="#22262B" />
+      <rect x="12" y="12" width="1" height="1" fill="#22262B" />
+      <rect x="13" y="12" width="1" height="1" fill="#22262B" />
+      <rect x="14" y="12" width="1" height="1" fill="#000000" />
+      <rect x=" 2" y="13" width="1" height="1" fill="#000000" />
+      <rect x=" 3" y="13" width="1" height="1" fill="#000000" />
+      <rect x=" 4" y="13" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 5" y="13" width="1" height="1" fill="#1A1D21" />
+      <rect x=" 6" y="13" width="1" height="1" fill="#1D2024" />
+      <rect x=" 7" y="13" width="1" height="1" fill="#1D2024" />
+      <rect x=" 8" y="13" width="1" height="1" fill="#1D2024" />
+      <rect x=" 9" y="13" width="1" height="1" fill="#1F2328" />
+      <rect x="10" y="13" width="1" height="1" fill="#1F2328" />
+      <rect x="11" y="13" width="1" height="1" fill="#1F2328" />
+      <rect x="12" y="13" width="1" height="1" fill="#000000" />
+      <rect x="13" y="13" width="1" height="1" fill="#000000" />
+      <rect x=" 4" y="14" width="1" height="1" fill="#000000" />
+      <rect x=" 5" y="14" width="1" height="1" fill="#000000" />
+      <rect x=" 6" y="14" width="1" height="1" fill="#1D2024" />
+      <rect x=" 7" y="14" width="1" height="1" fill="#1D2024" />
+      <rect x=" 8" y="14" width="1" height="1" fill="#1D2024" />
+      <rect x=" 9" y="14" width="1" height="1" fill="#1D2024" />
+      <rect x="10" y="14" width="1" height="1" fill="#000000" />
+      <rect x="11" y="14" width="1" height="1" fill="#000000" />
+      <rect x=" 6" y="15" width="1" height="1" fill="#000000" />
+      <rect x=" 7" y="15" width="1" height="1" fill="#000000" />
+      <rect x=" 8" y="15" width="1" height="1" fill="#000000" />
+      <rect x=" 9" y="15" width="1" height="1" fill="#000000" />
+    </svg>
+  </div>
+  {{ $script := slice (resources.Get "js/vendor/gsap.min.js") (resources.Get "js/index.js") | resources.Concat "js/index.js" | resources.Minify }}
+  <script type="text/javascript" src="{{ $script.RelPermalink }}"></script>
+{{ end }}
