--- a/assets/scss/_inter.scss
+++ b/assets/scss/_inter.scss
@@ -3,8 +3,8 @@
   font-style:  normal;
   font-weight: 100;
   font-display: swap;
-  src: url("Inter-Thin.woff2?v=3.13") format("woff2"),
-       url("Inter-Thin.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Thin.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Thin.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -12,8 +12,8 @@
   font-style:  italic;
   font-weight: 100;
   font-display: swap;
-  src: url("Inter-ThinItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-ThinItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-ThinItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-ThinItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -21,8 +21,8 @@
   font-style:  normal;
   font-weight: 200;
   font-display: swap;
-  src: url("Inter-ExtraLight.woff2?v=3.13") format("woff2"),
-       url("Inter-ExtraLight.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-ExtraLight.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-ExtraLight.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -30,8 +30,8 @@
   font-style:  italic;
   font-weight: 200;
   font-display: swap;
-  src: url("Inter-ExtraLightItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-ExtraLightItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-ExtraLightItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-ExtraLightItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -39,8 +39,8 @@
   font-style:  normal;
   font-weight: 300;
   font-display: swap;
-  src: url("Inter-Light.woff2?v=3.13") format("woff2"),
-       url("Inter-Light.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Light.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Light.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -48,8 +48,8 @@
   font-style:  italic;
   font-weight: 300;
   font-display: swap;
-  src: url("Inter-LightItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-LightItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-LightItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-LightItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -57,8 +57,8 @@
   font-style:  normal;
   font-weight: 400;
   font-display: swap;
-  src: url("Inter-Regular.woff2?v=3.13") format("woff2"),
-       url("Inter-Regular.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Regular.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Regular.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -66,8 +66,8 @@
   font-style:  italic;
   font-weight: 400;
   font-display: swap;
-  src: url("Inter-Italic.woff2?v=3.13") format("woff2"),
-       url("Inter-Italic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Italic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Italic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -75,8 +75,8 @@
   font-style:  normal;
   font-weight: 500;
   font-display: swap;
-  src: url("Inter-Medium.woff2?v=3.13") format("woff2"),
-       url("Inter-Medium.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Medium.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Medium.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -84,8 +84,8 @@
   font-style:  italic;
   font-weight: 500;
   font-display: swap;
-  src: url("Inter-MediumItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-MediumItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-MediumItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-MediumItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -93,8 +93,8 @@
   font-style:  normal;
   font-weight: 600;
   font-display: swap;
-  src: url("Inter-SemiBold.woff2?v=3.13") format("woff2"),
-       url("Inter-SemiBold.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-SemiBold.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-SemiBold.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -102,8 +102,8 @@
   font-style:  italic;
   font-weight: 600;
   font-display: swap;
-  src: url("Inter-SemiBoldItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-SemiBoldItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-SemiBoldItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-SemiBoldItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -111,8 +111,8 @@
   font-style:  normal;
   font-weight: 700;
   font-display: swap;
-  src: url("Inter-Bold.woff2?v=3.13") format("woff2"),
-       url("Inter-Bold.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Bold.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Bold.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -120,8 +120,8 @@
   font-style:  italic;
   font-weight: 700;
   font-display: swap;
-  src: url("Inter-BoldItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-BoldItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-BoldItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-BoldItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -129,8 +129,8 @@
   font-style:  normal;
   font-weight: 800;
   font-display: swap;
-  src: url("Inter-ExtraBold.woff2?v=3.13") format("woff2"),
-       url("Inter-ExtraBold.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-ExtraBold.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-ExtraBold.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -138,8 +138,8 @@
   font-style:  italic;
   font-weight: 800;
   font-display: swap;
-  src: url("Inter-ExtraBoldItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-ExtraBoldItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-ExtraBoldItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-ExtraBoldItalic.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -147,8 +147,8 @@
   font-style:  normal;
   font-weight: 900;
   font-display: swap;
-  src: url("Inter-Black.woff2?v=3.13") format("woff2"),
-       url("Inter-Black.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-Black.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-Black.woff?v=3.13") format("woff");
 }
 
 @font-face {
@@ -156,6 +156,6 @@
   font-style:  italic;
   font-weight: 900;
   font-display: swap;
-  src: url("Inter-BlackItalic.woff2?v=3.13") format("woff2"),
-       url("Inter-BlackItalic.woff?v=3.13") format("woff");
+  src: url("/fonts/inter/Inter-BlackItalic.woff2?v=3.13") format("woff2"),
+       url("/fonts/inter/Inter-BlackItalic.woff?v=3.13") format("woff");
 }
